[project]
name = "bay-health"
version = "0.1.0"
description = ""
authors = [
    {name = "scheuringp",email = "paul.scheuring@gmx.de"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "dash (>=3.1.1,<4.0.0)",
    "dash-ag-grid (>=31.3.1,<32.0.0)",
    "dash-bootstrap-components (>=2.0.3,<3.0.0)",
    "mistralai (>=1.9.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "dash-dangerously-set-inner-html (>=0.0.2,<0.0.3)",
    "dash-extensions (>=2.0.4,<3.0.0)",
    "flask (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
